# SPOT-CONNECT

./: .gitignore  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/apis/: location.py
backend/app/routes/: admin.py  auth.py  feedback.py  hashing.py  login.py  network.py  network_resilience_api.py  oauth2.py  register.py  schools.py  students.py  teachers.py  token.py  users.py
backend/templates/: schools.html
my-dashboard/: .env.local  next.config.js  package.json  tailwind.config.js
my-dashboard/components/: Dashboard.js  FeedbackForm.js  FeedbackList.js  Footer.js  Layout.js  Navbar.js  NearbyFeedback.js  NearbySchools.js  NetworkStatus.js  NetworkStatusPanel.js  Profile.js  SchoolList.js
my-dashboard/config/: api.js  index.js
my-dashboard/pages/: _app.js  feedback.js  index.js  login.js  logout.js  nearby-issues.js  network-dashboard.js  profile.js  protected.js  register.js  schools.js
my-dashboard/services/: networkService.js
my-dashboard/utils/: locationService.js
